Fixed bug with main content section being too short

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,11 +1,11 @@
 .homepage-hero {
-    height:80vh;  
+    min-height:100vh;  
 }
 
 .page-container {
-    background-image: linear-gradient(to bottom,rgba(255, 255, 255, 0),white), url("../images/mango-tree.PNG");
+    background-image: url("../images/mango-tree.PNG");
     background-repeat: no-repeat;
-    background-position: 50% 20%;
+    background-position: 50% -5%;
     background-size: 90vw;
 }
 
